# SimpleNN

./: CMakeLists.txt  README.md  main.cpp  neuralnetwork.h
